BD-20: Add doorkeeper, tailwind css, update api route version
